--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": " nodemon server.js"
+    "start": "cross-env NODE_ENV=production nodemon server.js",
+    "dev": "cross-env NODE_ENV=development nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -26,5 +27,8 @@
     "mysql2": "^3.14.1",
     "nodemon": "^3.1.10",
     "sharp": "^0.34.3"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   }
 }
