--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "multer": "^2.0.1",
     "mysql2": "^3.14.1",
     "nodemon": "^3.1.10",
+    "redis": "^5.7.0",
     "sharp": "^0.34.3"
   },
   "devDependencies": {
