--- a/nginx/Dockerfile.prod
+++ b/nginx/Dockerfile.prod
@@ -19,7 +19,7 @@ FROM nginx:alpine
 COPY --from=builder /app/build /usr/share/nginx/html
 
 # Copy the custom nginx config from project root
-COPY nginx/default.conf /etc/nginx/conf.d/default.conf
+COPY nginx/default.prod.conf /etc/nginx/conf.d/default.conf
 
 # Expose port 80 to allow incoming HTTP traffic
 EXPOSE 80
