--- a/server/package.json
+++ b/server/package.json
@@ -27,11 +27,11 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.1",
     "mysql2": "^3.14.1",
-    "nodemon": "^3.1.10",
     "redis": "^5.7.0",
     "sharp": "^0.34.3"
   },
   "devDependencies": {
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "nodemon": "^3.1.10"
   }
 }
