--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "start": "cross-env NODE_ENV=production node server.js",
     "dev": "cross-env NODE_ENV=development nodemon --legacy-watch --watch ./ server.js"
   },
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
+    "jest": "^30.0.5",
     "nodemon": "^3.1.10"
   }
 }
