--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,11 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "test": "cross-env NODE_ENV=test node --experimental-vm-modules node_modules/jest/bin/jest.js",
-    "test:watch": "cross-env NODE_ENV=test node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
-    "test:coverage": "cross-env NODE_ENV=test node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
+    "test": "cross-env NODE_ENV=test node --no-deprecation --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "test:unit": "cross-env NODE_ENV=test node --no-deprecation --experimental-vm-modules node_modules/jest/bin/jest.js --testPathIgnorePatterns=/test/",
+    "test:integration": "cross-env NODE_ENV=test node --no-deprecation --experimental-vm-modules node_modules/jest/bin/jest.js test/integration/",
+    "test:watch": "cross-env NODE_ENV=test node --no-deprecation --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
+    "test:coverage": "cross-env NODE_ENV=test node --no-deprecation --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
     "start": "cross-env NODE_ENV=production node server.js",
     "dev": "cross-env NODE_ENV=development nodemon --legacy-watch --watch ./ server.js"
   },
