renamed test to __tests__

--- a/server/package.json
+++ b/server/package.json
@@ -5,9 +5,9 @@
   "type": "module",
   "scripts": {
     "test": "cross-env NODE_ENV=test node --no-deprecation --experimental-vm-modules node_modules/jest/bin/jest.js",
-    "test:unit": "cross-env NODE_ENV=test node --no-deprecation --experimental-vm-modules node_modules/jest/bin/jest.js --testPathIgnorePatterns=/test/",
-    "test:integration": "cross-env NODE_ENV=test node --no-deprecation --experimental-vm-modules node_modules/jest/bin/jest.js test/integration/",
-    "test:ratelimiting": "cross-env NODE_ENV=test node --no-deprecation --experimental-vm-modules node_modules/jest/bin/jest.js test/ratelimiting/",
+    "test:unit": "cross-env NODE_ENV=test node --no-deprecation --experimental-vm-modules node_modules/jest/bin/jest.js --testPathIgnorePatterns=/__tests__/",
+    "test:integration": "cross-env NODE_ENV=test node --no-deprecation --experimental-vm-modules node_modules/jest/bin/jest.js __tests__/integration/",
+    "test:ratelimiting": "cross-env NODE_ENV=test node --no-deprecation --experimental-vm-modules node_modules/jest/bin/jest.js __tests__/ratelimiting/",
     "test:watch": "cross-env NODE_ENV=test node --no-deprecation --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
     "test:coverage": "cross-env NODE_ENV=test node --no-deprecation --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
     "start": "cross-env NODE_ENV=production node server.js",
