--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,7 @@
     "test:watch": "cross-env NODE_ENV=test node --no-deprecation --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
     "test:coverage": "cross-env NODE_ENV=test node --no-deprecation --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
     "start": "cross-env NODE_ENV=production node server.js",
-    "dev": "cross-env NODE_ENV=development nodemon --legacy-watch --watch ./ server.js"
+    "dev": "cross-env NODE_ENV=development nodemon --legacy-watch --watch ./ --exitcrash server.js"
   },
   "keywords": [],
   "author": "",
