implemented docker secrets

--- a/Docker-compose.dev.yaml
+++ b/Docker-compose.dev.yaml
@@ -5,8 +5,10 @@ services:
     container_name: mysql_db_dev             # Nom du conteneur
     restart: always                      # Redémarre automatiquement en cas d'arrêt
     environment:
-      MYSQL_ROOT_PASSWORD: 5599          # Mot de passe root
+      MYSQL_ROOT_PASSWORD_FILE: /run/secrets/mysql_root_password
       MYSQL_DATABASE: cinephoria         # Base de données créée au démarrage
+    secrets:
+      - mysql_root_password
     volumes:
       - mysql_data_dev:/var/lib/mysql        # Volume pour persister les données
       - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql  # Script SQL d'initialisation
@@ -77,3 +79,7 @@ volumes:
   redis_data_dev:                           # Volume persistant pour Redis
   node_modules_server_dev:                  # Add named volume for server node_modules
   node_modules_client_dev:                  # Add named volume for client node_modules
+
+secrets:
+  mysql_root_password:
+    file: ./secrets/mysql_root_password.txt
