--- a/nginx/default.dev.conf
+++ b/nginx/default.dev.conf
@@ -12,7 +12,7 @@ server {
     }
 
     # Proxy API requests to backend
-    location /api/ {
+    location /api/v1/ {
         proxy_pass http://backend_server_dev:8080;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
