--- a/nginx/default.prod.conf
+++ b/nginx/default.prod.conf
@@ -8,7 +8,7 @@ server {
     try_files $uri /index.html;
   }
 
-  location /api/ {
+  location /api/v1/ {
     proxy_pass http://backend_server:8080/;
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
