--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Build and push images
       run: |
         # Build and tag images
-        docker-compose -f Docker-compose.prod.yaml build
+        docker compose -f Docker-compose.prod.yaml build
         docker tag cinephoria-server:latest ${{ secrets.DOCKERHUB_USERNAME }}/cinephoria-server:latest
         docker tag cinephoria-nginx:latest ${{ secrets.DOCKERHUB_USERNAME }}/cinephoria-nginx:latest
         
@@ -53,8 +53,8 @@ jobs:
           cd /home/ubuntu/cinephoria-deploy
           
           # Pull new images and restart services
-          docker-compose pull
-          docker-compose up -d
+          docker compose pull
+          docker compose up -d
           
           # Optional: Health check
           sleep 30
