--- a/nginx/default.prod.conf
+++ b/nginx/default.prod.conf
@@ -9,7 +9,7 @@ server {
   }
 
   location /api/v1/ {
-    proxy_pass http://backend_server:8080/;
+    proxy_pass http://backend_server:8080/api/v1/;
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection 'upgrade';
