--- a/server/.dockerignore
+++ b/server/.dockerignore
@@ -1,7 +1,20 @@
 node_modules
 **/node_modules
+npm-debug.log*
 *.log
 .git
+.gitignore
 build
 dist
 *.env
+.env*
+coverage
+*.md
+README*
+Dockerfile*
+.dockerignore
+.nyc_output
+.vscode
+.idea
+*.tmp
+*.temp
