--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
     "test:ratelimiting": "cross-env NODE_ENV=test node --no-deprecation --experimental-vm-modules node_modules/jest/bin/jest.js __tests__/ratelimiting/",
     "test:watch": "cross-env NODE_ENV=test node --no-deprecation --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
     "test:coverage": "cross-env NODE_ENV=test node --no-deprecation --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
-    "start": "cross-env NODE_ENV=production node server.js",
+    "start": "NODE_ENV=production node server.js",
     "dev": "cross-env NODE_ENV=development nodemon --legacy-watch --watch ./ --exitcrash server.js"
   },
   "keywords": [],
