improved nginx domain logic (works on local host as well now, depends on Domain variable in .env file)

--- a/Docker-compose.prod.yaml
+++ b/Docker-compose.prod.yaml
@@ -58,6 +58,8 @@ services:
     depends_on:
       - nginx
     restart: unless-stopped
+    environment:
+      DOMAIN: ${DOMAIN:-localhost}
     volumes:
       - ssl_certificates:/etc/letsencrypt
       - ssl_challenges:/var/www/certbot
