fixed nginx-ssl script + changed domain

--- a/nginx-ssl/Dockerfile
+++ b/nginx-ssl/Dockerfile
@@ -13,7 +13,7 @@ RUN mkdir -p /var/www/certbot /etc/letsencrypt/live /etc/letsencrypt/archive
 RUN echo '#!/bin/sh' > /usr/local/bin/init-ssl.sh && \
     echo '' >> /usr/local/bin/init-ssl.sh && \
     echo '# Use DOMAIN environment variable directly' >> /usr/local/bin/init-ssl.sh && \
-    echo 'DOMAIN=${DOMAIN:-"newdemo.cinephoria.net"}' >> /usr/local/bin/init-ssl.sh && \
+    echo 'DOMAIN=${DOMAIN:-"demo.cinephoria.net"}' >> /usr/local/bin/init-ssl.sh && \
     echo 'EMAIL="admin@cinephoria.net"' >> /usr/local/bin/init-ssl.sh && \
     echo '' >> /usr/local/bin/init-ssl.sh && \
     echo 'echo "Starting SSL certificate initialization for domain: $DOMAIN"' >> /usr/local/bin/init-ssl.sh && \
@@ -24,39 +24,42 @@ RUN echo '#!/bin/sh' > /usr/local/bin/init-ssl.sh && \
     echo 'envsubst '"'"'${DOMAIN}'"'"' < /etc/nginx/nginx.conf.template > /etc/nginx/nginx.conf' >> /usr/local/bin/init-ssl.sh && \
     echo '' >> /usr/local/bin/init-ssl.sh && \
     echo '' >> /usr/local/bin/init-ssl.sh && \
-    echo '# Create self-signed placeholder certificates if none exist' >> /usr/local/bin/init-ssl.sh && \
-    echo 'if [ ! -f "/etc/letsencrypt/live/$DOMAIN/fullchain.pem" ]; then' >> /usr/local/bin/init-ssl.sh && \
-    echo '    echo "Creating self-signed placeholder certificates..."' >> /usr/local/bin/init-ssl.sh && \
+    echo '# Check if domain is localhost - skip Lets Encrypt if so' >> /usr/local/bin/init-ssl.sh && \
+    echo 'if [ "$DOMAIN" = "localhost" ]; then' >> /usr/local/bin/init-ssl.sh && \
+    echo '    echo "Domain is localhost - using self-signed certificates"' >> /usr/local/bin/init-ssl.sh && \
     echo '    mkdir -p /etc/letsencrypt/live/$DOMAIN' >> /usr/local/bin/init-ssl.sh && \
-    echo '    openssl req -x509 -nodes -days 1 -newkey rsa:2048 \' >> /usr/local/bin/init-ssl.sh && \
+    echo '    openssl req -x509 -nodes -days 365 -newkey rsa:2048 \' >> /usr/local/bin/init-ssl.sh && \
     echo '        -keyout /etc/letsencrypt/live/$DOMAIN/privkey.pem \' >> /usr/local/bin/init-ssl.sh && \
     echo '        -out /etc/letsencrypt/live/$DOMAIN/fullchain.pem \' >> /usr/local/bin/init-ssl.sh && \
     echo '        -subj "/CN=$DOMAIN"' >> /usr/local/bin/init-ssl.sh && \
-    echo '    echo "Placeholder certificates created"' >> /usr/local/bin/init-ssl.sh && \
-    echo 'fi' >> /usr/local/bin/init-ssl.sh && \
-    echo '' >> /usr/local/bin/init-ssl.sh && \
-    echo '# Start nginx with SSL configuration (using placeholder or real certs)' >> /usr/local/bin/init-ssl.sh && \
-    echo 'echo "Starting nginx with SSL configuration..."' >> /usr/local/bin/init-ssl.sh && \
-    echo 'nginx -g "daemon on;"' >> /usr/local/bin/init-ssl.sh && \
-    echo '' >> /usr/local/bin/init-ssl.sh && \
-    echo '# Try to get real certificates from Lets Encrypt' >> /usr/local/bin/init-ssl.sh && \
-    echo 'echo "Attempting to obtain real SSL certificates..."' >> /usr/local/bin/init-ssl.sh && \
-    echo 'certbot certonly --webroot --webroot-path=/var/www/certbot --email $EMAIL --agree-tos --no-eff-email -d $DOMAIN --force-renewal' >> /usr/local/bin/init-ssl.sh && \
-    echo '' >> /usr/local/bin/init-ssl.sh && \
-    echo 'if [ $? -eq 0 ]; then' >> /usr/local/bin/init-ssl.sh && \
-    echo '    echo "Real SSL certificates obtained! Reloading nginx..."' >> /usr/local/bin/init-ssl.sh && \
-    echo '    nginx -s reload' >> /usr/local/bin/init-ssl.sh && \
+    echo '    echo "Self-signed certificates created for localhost"' >> /usr/local/bin/init-ssl.sh && \
     echo 'else' >> /usr/local/bin/init-ssl.sh && \
-    echo '    echo "Failed to obtain real certificates. Continuing with placeholder certificates."' >> /usr/local/bin/init-ssl.sh && \
+    echo '    # Try to get real certificates from Lets Encrypt first' >> /usr/local/bin/init-ssl.sh && \
+    echo '    echo "Attempting to obtain real SSL certificates from Lets Encrypt..."' >> /usr/local/bin/init-ssl.sh && \
+    echo '    nginx -g "daemon on;"' >> /usr/local/bin/init-ssl.sh && \
+    echo '    if certbot certonly --webroot --webroot-path=/var/www/certbot --email $EMAIL --agree-tos --no-eff-email -d $DOMAIN; then' >> /usr/local/bin/init-ssl.sh && \
+    echo '        echo "Real SSL certificates obtained from Lets Encrypt!"' >> /usr/local/bin/init-ssl.sh && \
+    echo '        nginx -s quit' >> /usr/local/bin/init-ssl.sh && \
+    echo '        sleep 2' >> /usr/local/bin/init-ssl.sh && \
+    echo '    else' >> /usr/local/bin/init-ssl.sh && \
+    echo '        echo "Lets Encrypt failed - falling back to self-signed certificates"' >> /usr/local/bin/init-ssl.sh && \
+    echo '        nginx -s quit' >> /usr/local/bin/init-ssl.sh && \
+    echo '        sleep 2' >> /usr/local/bin/init-ssl.sh && \
+    echo '        mkdir -p /etc/letsencrypt/live/$DOMAIN' >> /usr/local/bin/init-ssl.sh && \
+    echo '        openssl req -x509 -nodes -days 365 -newkey rsa:2048 \' >> /usr/local/bin/init-ssl.sh && \
+    echo '            -keyout /etc/letsencrypt/live/$DOMAIN/privkey.pem \' >> /usr/local/bin/init-ssl.sh && \
+    echo '            -out /etc/letsencrypt/live/$DOMAIN/fullchain.pem \' >> /usr/local/bin/init-ssl.sh && \
+    echo '            -subj "/CN=$DOMAIN"' >> /usr/local/bin/init-ssl.sh && \
+    echo '        echo "Self-signed certificates created as fallback"' >> /usr/local/bin/init-ssl.sh && \
+    echo '    fi' >> /usr/local/bin/init-ssl.sh && \
     echo 'fi' >> /usr/local/bin/init-ssl.sh && \
     echo '' >> /usr/local/bin/init-ssl.sh && \
     echo '# Setup automatic certificate renewal' >> /usr/local/bin/init-ssl.sh && \
     echo 'echo "0 2 * * * /usr/bin/certbot renew --quiet && /usr/sbin/nginx -s reload" > /etc/crontabs/root' >> /usr/local/bin/init-ssl.sh && \
     echo 'crond' >> /usr/local/bin/init-ssl.sh && \
     echo '' >> /usr/local/bin/init-ssl.sh && \
-    echo '# Keep nginx running in foreground' >> /usr/local/bin/init-ssl.sh && \
-    echo 'nginx -s quit  # Stop the daemon version' >> /usr/local/bin/init-ssl.sh && \
-    echo 'exec nginx -g "daemon off;"  # Start in foreground' >> /usr/local/bin/init-ssl.sh && \
+    echo '# Start nginx in foreground mode' >> /usr/local/bin/init-ssl.sh && \
+    echo 'exec nginx -g "daemon off;"' >> /usr/local/bin/init-ssl.sh && \
     chmod +x /usr/local/bin/init-ssl.sh
 
 # Expose HTTP and HTTPS ports
