--- a/nginx-ssl/nginx.conf
+++ b/nginx-ssl/nginx.conf
@@ -6,7 +6,7 @@ http {
     # HTTP server - Let's Encrypt challenges and redirect to HTTPS
     server {
         listen 80;
-        server_name newdemo.cinephoria.net;
+        server_name demo.cinephoria.net;
         
         location /.well-known/acme-challenge/ {
             root /var/www/certbot;
@@ -20,10 +20,10 @@ http {
     # HTTPS server - SSL termination and proxy to app
     server {
         listen 443 ssl;
-        server_name newdemo.cinephoria.net;
+        server_name demo.cinephoria.net;
         
-        ssl_certificate /etc/letsencrypt/live/newdemo.cinephoria.net/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/newdemo.cinephoria.net/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/demo.cinephoria.net/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/demo.cinephoria.net/privkey.pem;
         
         location / {
             proxy_pass http://nginx_frontend:80;
