--- a/Docker-compose.prod.yaml
+++ b/Docker-compose.prod.yaml
@@ -47,6 +47,12 @@ services:
     command: npm start                   # Commande pour démarrer le serveur
     volumes:
       - ./db:/db
+    healthcheck:
+      test: ["CMD", "node", "-e", "require('http').get('http://localhost:8080/', (res) => process.exit(res.statusCode === 200 ? 0 : 1)).on('error', () => process.exit(1))"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
 
   nginx-ssl:
     build:
@@ -56,7 +62,10 @@ services:
       - "80:80"
       - "443:443"
     depends_on:
-      - nginx
+      nginx:
+        condition: service_started
+      server:
+        condition: service_healthy
     restart: unless-stopped
     environment:
       DOMAIN: ${DOMAIN:-localhost}
